--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": " node server/app.js",
     "test": "ava",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
-    "build-client": "NODE_ENV=production ykit pack -m",
+    "build-client": "ykit pack -m",
     "npm-publish": "node ./npm-publish.js",
     "docs": "ydoc build"
   },
@@ -85,7 +85,7 @@
     "underscore": "1.8.3",
     "url": "0.11.0",
     "vm2": "^3.8.4",
-    "yapi-plugin-qsso": "^1.1.0"
+    "yapi-plugin-dingding": "^1.3.0"
   },
   "devDependencies": {
     "antd": "3.2.2",
@@ -124,7 +124,7 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "markdown-it-include": "^1.0.0",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.14.1",
     "nodemon": "^1.11.0",
     "prop-types": "^15.5.10",
     "rc-queue-anim": "^1.2.0",
